--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -24,17 +24,90 @@
             ->prependFile($this->basePath('js/html5shiv.js'),   'text/javascript', array('conditional' => 'lt IE 9',))
         ; ?>
 
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta content="Olivet University, where future leaders and scholars are equipped to change the world for Jesus Christ. Olivet University students come from a wide range of age groups, geographical areas, educational backgrounds, and cultural heritages, creating a rich and challenging educational environment." name="description" />
+<meta name="keywords" content="Olivet University, Olivet, News, Campus News" />
+<meta name="keyphrase" content="Olivet University News, Olivet News" />
+<title>Olivet University News - OlivetNews.com</title>
+<meta name="msvalidate.01" content="1041215C1BB846E107FFF683F2966CCD" />
+<meta name="p:domain_verify" content="0d63b3d3525a4ce3df924cbb2a20d05c" />
+<link href="http://www.olivetnews.com/images/favicon.ico" rel="shortcut icon" />
+<link href="http://www.olivetnews.com/css/style_olivetnews.css" rel="stylesheet" type="text/css" />
+        
     </head>
     <body>
-       <?php include "header.phtml"; ?>
+       <?php echo $this->render("layout/header") ; ?>
 
+           <!-- Header End -->
+	    <!-- Contents Start -->
+	    <div id="ConWrapLeft">
+    	<div id="ConWrapRight">
+        	<div id="ContentsWrapper">
+            	<div id="Contents">
+                	<div id="ConLeft">
+			<!-- MainNav Start -->
+			<?php echo $this->render("layout/nav")?>
+                        
+                        
         <div>
             <?php echo $this->content; ?>
         </div> <!-- /container -->
+        
+        
+        
+        
+         </div>
+                    <div id="ConRight">
+                    	<div id="SocialBox">
+                        	<ul>
+                                <li class="img00"><a href="http://www.facebook.com/TheOlivetUniversity" target="_blank" title="Olivet University Facebook"></a></li>
+                                <li class="img01"><a href="https://twitter.com/#!/OlivetUniv" target="_blank" title="Olivet University Twitter"></a></li>
+                                <li class="img02"><a href="http://www.flickr.com/photos/olivetuniversity" target="_blank" title="Olivet University Flickr"></a></li>
+                                <li class="img03"><a href="https://plus.google.com/116414237970966818430/" target="_blank" title="Olivet University Google Plus"></a></li>
+                                <li class="img04"><a href="http://www.youtube.com/OlivetUniv" target="_blank" title="Olivet University Youtube"></a></li>
+                                <li class="img05"><a href="http://www.olivetnews.com/rss.php" target="_blank" title="Olivet University RSS"></a></li>
+                            </ul>
+                        </div>
+                        <!-- <div class="RightInfo">
+                        	<p>Olivet University is a warm and friendly place to pursue a serious Christian education. Olivet University students come from a wide range of age groups, geographical areas, educational backgrounds, and cultural heritages, creating a rich and challenging educational environment.</p>
+                        </div> -->
+                        <div class="RightInfo">
+                        	<h2>Olivet University Colleges</h2>
+                            <ul>
+                            	<li><a href="http://otcs.olivetuniversity.edu/" target="_blank" title="Olivet University, Olivet Theological College & Seminary">Olivet Theological College &amp; Seminary</a></li>
+                                <li><a href="http://jcm.olivetuniversity.edu/" target="_blank" title="Olivet University, Jubilee College of Music">Jubilee College of Music</a></li>
+                                <li><a href="http://ocj.olivetuniversity.edu/" target="_blank" title="Olivet University, Olivet College of Journalism">Olivet College of Journalism</a></li>
+                                <li><a href="http://ocad.olivetuniversity.edu/" target="_blank" title="Olivet University, Olivet College of Art & Design">Olivet College of Art &amp; Design</a></li>
+                                <li><a href="http://oit.olivetuniversity.edu/" target="_blank" title="Olivet University, Olivet Institute of Technology">Olivet Institute of Technology</a></li>
+                                <li><a href="http://ocle.olivetuniversity.edu/" target="_blank" title="Olivet University, Olivet College of Language Education">Olivet College of Language Education</a></li>
+                                <li><a href="http://ocb.olivetuniversity.edu/" target="_blank" title="Olivet University, Olivet College of Business">Olivet College of Business</a></li>
+                                <li><a href="http://www.olivetuniversity.edu/zinzendorf/" target="_blank" title="Olivet University, Zinzendorf School of Doctoral Studies">Zinzendorf School of Doctoral Studies</a></li>
+                            </ul>
+                        </div>
+                        <div class="RightInfo">
+                        	<h2>Olivet University Features</h2>
+                            <ul>
+                            	<li><a href="http://www.olivetuniversity.edu/library/" target="_blank" title="Olivet University Ralph D. Winter library">Ralph D. Winter library</a></li>
+                                <li><a href="http://www.olivetuniversity.edu/donation/" target="_blank" title="Give to Olivet University">Give to Olivet University</a></li>
+                                <li><a href="http://olivetyou.com/" target="_blank" title="Olivet University You">Olivet You</a></li>
+                                <li><a href="http://olivettheology.com/" target="_blank" title="Olivet University Seminary Blog">Olivet University Seminary Blog</a></li>
+                                <li><a href="http://olivetjubileemusic.com/" target="_blank" title="Olivet University Jubilee Music Blog">Olivet University Jubilee Music Blog</a></li>
+                                <li><a href="http://olivetjournalism.com/" target="_blank" title="Olivet University Journalism Blog">Olivet Journalism Blog</a></li>
+                                <li><a href="http://olivetartdesign.com/" target="_blank" title="Olivet University Art & Design Blog">Olivet Art &amp; Design Blog</a></li>
+                                <li><a href="http://olivettech.com/" target="_blank" title="Olivet University Institute of Technology Blog">Olivet Institute of Technology Blog</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+   
+   
         <?php echo $this->inlineScript() ?>
         
         <?php echo $this->layout()->sidebar; ?>
-        <?php include "footer.phtml";  ?>
+        <?php echo $this->render("layout/footer") ; ?>
 
     </body>
 </html>
